[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Characters/Enemies/Bosses/Bringer-of-Death-SpritSheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/BringerOfDeath/BringerHandAttack.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 26.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 48 ]
}

[sub_resource type="Animation" id=3]
resource_name = "action"
length = 0.65625
loop = true
step = 0.03125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03125, 0.0625, 0.09375, 0.15625, 0.25, 0.34375, 0.4375, 0.53125, 0.59375, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.031, 0.5625, 0.65625 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_CM_init_action_animation"
}, {
"args": [  ],
"method": "_CM_action_attack"
}, {
"args": [  ],
"method": "_CM_end_attack"
}, {
"args": [  ],
"method": "_CM_finish_action_animation"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.44
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 48, 61, 50, 49, 62 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 76 )

[node name="BringerHandAttack" type="KinematicBody2D"]
collision_layer = 2048
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 18.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 3 )
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 48

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/action = SubResource( 3 )
anims/idle = SubResource( 5 )

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -4, 76 )
shape = SubResource( 4 )
disabled = true

[node name="FrontFlip" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )
collision_mask = 528

[node name="RayAttack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 152 )
